<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Change</string>
    <string name="exchange">Обмени</string>
    <string name="rates">Курсове</string>
    <string name="local_rates">Локални курсове</string>
    <string name="code">Код</string>
    <string name="rate">Курс</string>
    <string name="reverse">Обратен</string>
    <string name="name">Име</string>
    <string name="ratio">Валута</string>
    <string name="edit">Редактиране</string>
    <string name="cancel">Отмяна</string>
    <string name="edit_dialog">Редактиране</string>
    <string name="logs">Логове</string>
    <string name="stocks">Наличност</string>
    <string name="not_enough_in_stock">Няма достатъчно в наличност</string>
    <string name="currency_from">Валута от</string>
    <string name="currency_to">Валута за</string>
    <string name="currency_from_amount">Валута от сума</string>
    <string name="currency_to_amount">Валута за сума</string>
    <string name="date">Дата</string>
    <string name="no_internet">Няма интернет връзка, натиснете тук за проверка</string>
    <string name="amount">Сума</string>
    <string name="empty_fields">Всички полета са задължителни</string>
    <string name="no_image">Няма снимка</string>
    <string name="flag">Флаг</string>
    <string name="monthly_graph">Месечен график</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_graph">Месечен график</string>

    <string-array name="fragments_names">
        <item>Обмени</item>
        <item>Курсове</item>
        <item>Локални курсове</item>
        <item>Логове</item>
        <item>Наличност</item>
    </string-array>

</resources>