<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="#000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp">

    <TextView
        style="@style/Header"
        android:text="@string/flag"
        android:layout_weight="1.5" />

    <TextView
        style="@style/Header"
        android:text="@string/code"
        android:layout_weight="2" />

    <TextView
        style="@style/Header"
        android:text="@string/rate"
        android:layout_weight="2" />

    <TextView
        style="@style/Header"
        android:text="@string/reverse"
        android:layout_weight="2" />

</LinearLayout>