<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exchangeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.Exchange">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress" />

    <TextView
        android:id="@+id/amountLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/amount"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/amount"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/exchange"
        android:layout_marginBottom="25dp"
        android:inputType="numberDecimal"
        android:background="@drawable/rounded_corners"
        android:textColor="#000"
        android:gravity="center"
        android:ems="10"
        android:visibility="gone" />

    <Spinner
        style="@style/SpinnerStyle"
        android:id="@+id/fromCurrencySpinner"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/exchange"
        android:visibility="gone" />

    <Button
        android:id="@+id/exchange"
        android:text="@string/exchange"
        android:background="@drawable/change_on_click"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" />

    <Spinner
        style="@style/SpinnerStyle"
        android:id="@+id/toCurrencySpinner"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/exchange"
        android:visibility="gone" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/exchange"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#000"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noInternetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#fff"
        android:text="@string/no_internet"
        android:textSize="40sp"
        android:gravity="center" />

</RelativeLayout>